name:                cookbook-conduit-serve-file
version:             2.1
synopsis:            Serving files with Servant and Conduit example
homepage:            http://haskell-servant.readthedocs.org/
license:             BSD3
license-file:        ../../../servant/LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
build-type:          Simple
cabal-version:       >=1.10

executable conduit-serve-file
  if impl(ghc < 7.10.1)
    buildable:          False
  main-is:             ConduitServe.lhs
  build-depends:       base == 4.*
                     , servant
                     , servant-server
                     , conduit == 1.3.*
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
